[gd_scene load_steps=8 format=3 uid="uid://dqcx081xjqlj7"]

[ext_resource type="PackedScene" uid="uid://bx0l5b5fqhk0l" path="res://Munchme/munchme.tscn" id="1_ogbw3"]
[ext_resource type="Script" path="res://Munchme/munchme_resource.gd" id="2_8tfwt"]
[ext_resource type="Script" path="res://Munchme/Dipshit/Dipshit.gd" id="2_db2f0"]
[ext_resource type="PackedScene" uid="uid://cndhpflfe2f6g" path="res://Munchme/Dipshit/dipshit_model.tscn" id="3_vmdgh"]
[ext_resource type="PackedScene" uid="uid://chov0ya4t4q2h" path="res://Munchme/Dipshit/DipshitMinigame.tscn" id="4_54x24"]

[sub_resource type="Resource" id="Resource_0yd1n"]
script = ExtResource("2_8tfwt")
id = 0
name = "Dipshit"
munchme_type = 4
max_health = 100
mood = 1
catch_track = 3
roam_track = 2
catch_looker_size = Vector2(900, 900)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ismua"]
radius = 0.443271
height = 1.49385

[node name="Dipshit" instance=ExtResource("1_ogbw3")]
script = ExtResource("2_db2f0")
resource = SubResource("Resource_0yd1n")
height = 1.5

[node name="CollisionShape3D" type="CollisionShape3D" parent="." index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.748874, 0)
shape = SubResource("CapsuleShape3D_ismua")

[node name="Model" parent="." index="1" instance=ExtResource("3_vmdgh")]
transform = Transform3D(0.649745, 0, 0, 0, 0.649745, 0, 0, 0, 0.649745, 0, -0.0176239, 0)

[node name="OverworldMovement" parent="." index="4"]
can_jump = true
jump_velocity = 11.0

[node name="DipshitMinigame" parent="." index="7" instance=ExtResource("4_54x24")]
visible = false

[node name="WinTimer" type="Timer" parent="DipshitMinigame" index="1"]
unique_name_in_owner = true
wait_time = 10.0

[connection signal="ball_dropped" from="DipshitMinigame" to="." method="_on_dipshit_minigame_ball_dropped"]
[connection signal="timeout" from="DipshitMinigame/WinTimer" to="." method="_on_win_timer_timeout"]
